// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Renders Without title and Menu Items 1`] = `
<header
  className="Menu"
>
  <h1>
    Hello World
  </h1>
</header>
`;

exports[`Menu Renders with title and Menu Items 1`] = `
<header
  className="Menu"
>
  <h1>
    Custom title
  </h1>
  <ul>
    <li>
       
      Item 1
       
    </li>
    <li>
       
      Item 2
       
    </li>
    <li>
       
      Item 3
       
    </li>
  </ul>
</header>
`;

exports[`Menu Renders with title and without Menu Items 1`] = `
<header
  className="Menu"
>
  <h1>
    Custom title
  </h1>
</header>
`;

exports[`Menu Renders without title and with Menu Items 1`] = `
<header
  className="Menu"
>
  <h1>
    Hello World
  </h1>
  <ul>
    <li>
       
      Item 1
       
    </li>
    <li>
       
      Item 2
       
    </li>
    <li>
       
      Item 3
       
    </li>
  </ul>
</header>
`;
